--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "babel-plugin-module-resolver": "^4.1.0",
     "classnames": "^2.3.1",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-falcon": "^0.1.0",
     "react-icons": "^4.4.0",
